01-gabbar/03-stakater-nordmart-review-ui-bg-route/01-dev/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: review-ui
spec:
  host: review-ui-gabbar-dev.apps.devtest.vxdqgl7u.kubeapp.cloud
  to:
    kind: Service
    name: review-ui-blue
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
